# EgzaminMaklerski

./: .gitignore  README.md  docker-compose.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd-dev.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt  settings.py
backend/alembic/: env.py
backend/db/: database.py  models.py
backend/routers/: admin.py  analytics.py  auth.py  exam.py  notion.py  reports.py  stats.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_exam.py  test_notion.py  test_reports.py
frontend/: Dockerfile  env.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  AuthContext.jsx  api.js  index.css
frontend/src/components/: AuthCallback.jsx  DarkModeContext.jsx  ExamList.jsx  ExamQuestion.jsx  LoginPage.jsx  Navbar.jsx  ProtectedRoute.jsx  QuestionFilter.jsx  ScoreSummary.jsx  TopicsList.jsx
frontend/src/pages/: AdminPage.jsx  MainPage.jsx  (+4 more)
functions/: .funcignore  Dockerfile  function_app.py  local.settings.json.example  requirements.txt  seed_local_blobs.py
misc/: log.py  settings.py
monitoring/: grafana-datasource.azure.yml.tpl  prometheus.azure.yml.tpl  prometheus.yml
scrapper/: .gitignore  ingestion.py  inserting.py  main.py  pdf_extracting.py  question_classifier.py  requirements.txt
scrapper/data/: output09.10.2022.json  output12.10.2025.json  output13.10.2024.json  output15.10.2023.json  output17.03.2024.json  output19.03.2023.json  output27.03.2022.json  output30.03.2025.json
terraform/: .gitignore
(+33 files in other folders)
