[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "mongomock>=4.3.0",
    "openai>=2.31.0",
    "pdf2image>=1.17.0",
    "prometheus-client>=0.25.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "pymongo>=4.16.0",
    "pymupdf>=1.27.2.2",
    "pytesseract>=0.3.13",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.44.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
